; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_audio_out.c_audio_enable_eq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_audio_out.c_audio_enable_eq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audio = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.audio*, i32)* @audio_enable_eq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @audio_enable_eq(%struct.audio* %0, i32 %1) #0 {
  %3 = alloca %struct.audio*, align 8
  %4 = alloca i32, align 4
  store %struct.audio* %0, %struct.audio** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.audio*, %struct.audio** %3, align 8
  %6 = getelementptr inbounds %struct.audio, %struct.audio* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %7, %8
  br i1 %9, label %10, label %22

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.audio*, %struct.audio** %3, align 8
  %13 = getelementptr inbounds %struct.audio, %struct.audio* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 8
  %14 = load %struct.audio*, %struct.audio** %3, align 8
  %15 = getelementptr inbounds %struct.audio, %struct.audio* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %10
  %19 = load %struct.audio*, %struct.audio** %3, align 8
  %20 = call i32 @audio_dsp_set_eq(%struct.audio* %19)
  br label %21

21:                                               ; preds = %18, %10
  br label %22

22:                                               ; preds = %21, %2
  ret i32 0
}

declare dso_local i32 @audio_dsp_set_eq(%struct.audio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
